@@ -1,3 +1,11 @@
+2012-06-30 Riccardo Mottola <rm@gnu.org>
+
+	* AppController.h
+	* AppController.m
+	* DBLogger.h
+	* DBLogger.m
+	Logger level setters.
+
 2012-06-29 Riccardo Mottola <rm@gnu.org>
 
 	* DBSoap.m
